{
  "version": 4,
  "terraform_version": "1.7.0",
  "serial": 34,
  "lineage": "dba9f2a4-47cd-2bad-9798-a20a8464edd3",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "pri_insta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-009d5fce35d17d28c",
            "arn": "arn:aws:ec2:eu-west-3:839684713127:instance/i-0e8a33f66a6e6e921",
            "associate_public_ip_address": false,
            "availability_zone": "eu-west-3b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0e8a33f66a6e6e921",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "paris",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-01fc8f6ecf2d56825",
            "private_dns": "ip-192-168-15-230.eu-west-3.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "192.168.15.230",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-05e32e6d78f5bc1de",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-007f0e49e8aae1c74",
            "tags": {
              "Name": "pri_insta"
            },
            "tags_all": {
              "Name": "pri_insta"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0ad513cf4ade2deb9"
            ]
          },
          "dependencies": [
            "aws_security_group.aws_security",
            "aws_subnet.pri_sub",
            "aws_vpc.name_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "pub_insta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-009d5fce35d17d28c",
            "arn": "arn:aws:ec2:eu-west-3:839684713127:instance/i-0b4ceebb4b4d1523f",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-3a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0b4ceebb4b4d1523f",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "paris",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-030ed1f8b439206f6",
            "private_dns": "ip-192-168-0-53.eu-west-3.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "192.168.0.53",
            "public_ip": "15.237.96.172",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0f276b37f1c6d98da",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-099f2aba037952eba",
            "tags": {
              "Name": "pub_insta"
            },
            "tags_all": {
              "Name": "pub_insta"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0ad513cf4ade2deb9"
            ]
          },
          "dependencies": [
            "aws_security_group.aws_security",
            "aws_subnet.pub_sub",
            "aws_vpc.name_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "IGW_21",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:839684713127:internet-gateway/igw-071fd6c27ffc60e32",
            "id": "igw-071fd6c27ffc60e32",
            "owner_id": "839684713127",
            "tags": {
              "Name": "IGW_new"
            },
            "tags_all": {
              "Name": "IGW_new"
            },
            "vpc_id": "vpc-02ff4894c1f92ea52"
          },
          "dependencies": [
            "aws_vpc.name_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "routnig_table_pri",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:839684713127:route-table/rtb-08eeb1b647a4b03f3",
            "id": "rtb-08eeb1b647a4b03f3",
            "owner_id": "839684713127",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "RT_pri"
            },
            "tags_all": {
              "Name": "RT_pri"
            },
            "timeouts": null,
            "vpc_id": "vpc-02ff4894c1f92ea52"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.name_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "routnig_table_pub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:839684713127:route-table/rtb-0e7efcd89c11da2ec",
            "id": "rtb-0e7efcd89c11da2ec",
            "owner_id": "839684713127",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-071fd6c27ffc60e32",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "RT_PUB"
            },
            "tags_all": {
              "Name": "RT_PUB"
            },
            "timeouts": null,
            "vpc_id": "vpc-02ff4894c1f92ea52"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.IGW_21",
            "aws_vpc.name_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pri_rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d6af83b271b4c4e5",
            "route_table_id": "rtb-08eeb1b647a4b03f3",
            "subnet_id": "subnet-007f0e49e8aae1c74"
          },
          "dependencies": [
            "aws_route_table.routnig_table_pri",
            "aws_subnet.pri_sub",
            "aws_vpc.name_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pub_rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-075b940746bf10acf",
            "route_table_id": "rtb-0e7efcd89c11da2ec",
            "subnet_id": "subnet-099f2aba037952eba"
          },
          "dependencies": [
            "aws_internet_gateway.IGW_21",
            "aws_route_table.routnig_table_pub",
            "aws_subnet.pub_sub",
            "aws_vpc.name_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "aws_security",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:839684713127:security-group/sg-0ad513cf4ade2deb9",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ad513cf4ade2deb9",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allow port",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 22
              }
            ],
            "name": "terraform-20240204091813186800000002",
            "name_prefix": "terraform-",
            "owner_id": "839684713127",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "secu_group"
            },
            "tags_all": {
              "Name": "secu_group"
            },
            "timeouts": null,
            "vpc_id": "vpc-02ff4894c1f92ea52"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.name_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pri_sub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:839684713127:subnet/subnet-007f0e49e8aae1c74",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3b",
            "availability_zone_id": "euw3-az2",
            "cidr_block": "192.168.12.0/22",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-007f0e49e8aae1c74",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "839684713127",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pri_sub"
            },
            "tags_all": {
              "Name": "pri_sub"
            },
            "vpc_id": "vpc-02ff4894c1f92ea52"
          },
          "dependencies": [
            "aws_vpc.name_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pub_sub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:839684713127:subnet/subnet-099f2aba037952eba",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3a",
            "availability_zone_id": "euw3-az1",
            "cidr_block": "192.168.0.0/22",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-099f2aba037952eba",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "839684713127",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pub_sub"
            },
            "tags_all": {
              "Name": "pub_sub"
            },
            "vpc_id": "vpc-02ff4894c1f92ea52"
          },
          "dependencies": [
            "aws_vpc.name_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "name_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:839684713127:vpc/vpc-02ff4894c1f92ea52",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/20",
            "default_network_acl_id": "acl-07459d4e1e91315db",
            "default_route_table_id": "rtb-0d3f9b6bc1dc5f566",
            "default_security_group_id": "sg-05aa27025ddf8be37",
            "dhcp_options_id": "dopt-0ea364480b0db7103",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-02ff4894c1f92ea52",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0d3f9b6bc1dc5f566",
            "owner_id": "839684713127",
            "tags": {
              "Name": "Name_vpc"
            },
            "tags_all": {
              "Name": "Name_vpc"
            }
          }
        }
      ]
    }
  ]
}